# nexusmind

./: .env  .env.example  CLAUDE.md  MIGRATION.md  SPEC.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: scratchpad.md  settings.json
.claude/agents/: frontend-specialist.md  security-reviewer.md  test-engineer.md
.claude/commands/: fix.md  implement.md  phase.md  research.md  review.md  test.md
.claude/hooks/: block-dangerous.py  update-scratchpad.py
.claude/skills/: api-service-patterns.md  background-scheduler.md  conversation-engine.md  dspy-modules.md  finetuning-pipeline.md  frontend-patterns.md  llm-integration.md  memory-system.md  neo4j-graph.md  personality-triple-layer.md  self-evolution.md  social-layer.md  teachback-bloom.md  verification-council.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py
context/: ADAPTIVE_ONBOARDING.md  CONVERSATION_MODES.md  EMBEDDED_TUTOR.md  FIX_CRITICAL_BUGS.md  MOCK_AGENTS_CONNECTIONS.md  PROFILE_SECTION.md  SOCIAL_LAYER.md  TRUST_ADAPTIVE.md
dev/: phase-1-tasks.md  phase-2-tasks.md  phase-3-tasks.md  phase-4-tasks.md  phase-5-tasks.md  phase-6-tasks.md
docs/: ARCHITECTURE.md  DECISIONS.md  EVOLUTION.md  LAYERS.md
frontend/: CLAUDE.md  package-lock.json  package.json
frontend/app/: layout.tsx
frontend/components/: AuthGuard.tsx  NavBar.tsx  StoreProvider.tsx
frontend/lib/: api.ts  store.ts
scripts/: run_scheduler.py  seed_demo.py
src/: CLAUDE.md  config.py  main.py
tests/: conftest.py
training/: evaluate.py  merge_adapters.py  prepare_data.py  train_full.py  train_micro.py
(+88 files in other folders)
